# xstatic-roboto-fontface

./: .gitreview  MANIFEST.in  README.txt  setup.cfg  setup.py
xstatic/pkg/roboto_fontface/: __init__.py
