[metadata]
name = XStatic-roboto-fontface
description = roboto-fontface 0.8.0 (XStatic packaging standard)
description-file = README.rst
maintainer = Rob Cresswell
maintainer-email = robert.cresswell@outlook.com
home-page = https://github.com/choffmeister/roboto-fontface-bower
keywords = roboto_fontface xstatic
license = Apache-2.0
zip_safe = False

[bdist_wheel]
universal = True
